--- a/style.css
+++ b/style.css
@@ -2,6 +2,6 @@ body {
   background-color: #3A2A00;
 }
 @font-face {
-  font-family: "";
-  src: "";
+  font-family: "Runes";
+  src: "dustbyter.github.io/assets/fonts/";
 }
