--- a/style.css
+++ b/style.css
@@ -28,3 +28,32 @@ body {
   border-radius: 8px;
   font-family: "Forgore";
 }
+.dialoguewrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-top: 45vh;
+}
+.dialoguebox {
+  background-color: Bisque;
+  padding: 20px 30px;
+  border-radius: 12px;
+  border: 3px solid LightPink;
+  max-width: 400px;
+}
+.dialoguetext {
+  font-family: "Forgore";
+  font-size: 1.75rem;
+  color: DarkGoldenRod;
+}
+.nextbutton {
+  color: white;
+  background-color: DarkGoldenRod;
+  padding: 15px 30px;
+  font-size: 1.5rem;
+  border-radius: 8px;
+  font-family: "Forgore";
+}
+  
+  
