--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body {
   font-family: "Forgore";
   font-size: 1.75rem;
   color: DarkGoldenRod;
+  min-height: 3em;
 }
 .nextbutton {
   color: white;
