--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ body {
   font-size: 1.75rem;
   border-radius: 12px;
   font-family: "Forgore";
+  background-color: DarkGoldenRod;
   color: white;
 }
 #namestep {
